; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/imu/extr_kmx61.c_kmx61_indiodev_setup.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/imu/extr_kmx61.c_kmx61_indiodev_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iio_dev = type { i32, i8*, %struct.iio_info*, i32, %struct.iio_chan_spec*, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32* }
%struct.kmx61_data = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }
%struct.iio_info = type { i32 }
%struct.iio_chan_spec = type { i32 }

@ENOMEM = common dso_local global i32 0, align 4
@INDIO_DIRECT_MODE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.iio_dev* (%struct.kmx61_data*, %struct.iio_info*, %struct.iio_chan_spec*, i32, i8*)* @kmx61_indiodev_setup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.iio_dev* @kmx61_indiodev_setup(%struct.kmx61_data* %0, %struct.iio_info* %1, %struct.iio_chan_spec* %2, i32 %3, i8* %4) #0 {
  %6 = alloca %struct.iio_dev*, align 8
  %7 = alloca %struct.kmx61_data*, align 8
  %8 = alloca %struct.iio_info*, align 8
  %9 = alloca %struct.iio_chan_spec*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca %struct.iio_dev*, align 8
  store %struct.kmx61_data* %0, %struct.kmx61_data** %7, align 8
  store %struct.iio_info* %1, %struct.iio_info** %8, align 8
  store %struct.iio_chan_spec* %2, %struct.iio_chan_spec** %9, align 8
  store i32 %3, i32* %10, align 4
  store i8* %4, i8** %11, align 8
  %13 = load %struct.kmx61_data*, %struct.kmx61_data** %7, align 8
  %14 = getelementptr inbounds %struct.kmx61_data, %struct.kmx61_data* %13, i32 0, i32 0
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = call %struct.iio_dev* @devm_iio_device_alloc(i32* %16, i32 8)
  store %struct.iio_dev* %17, %struct.iio_dev** %12, align 8
  %18 = load %struct.iio_dev*, %struct.iio_dev** %12, align 8
  %19 = icmp ne %struct.iio_dev* %18, null
  br i1 %19, label %24, label %20

20:                                               ; preds = %5
  %21 = load i32, i32* @ENOMEM, align 4
  %22 = sub nsw i32 0, %21
  %23 = call %struct.iio_dev* @ERR_PTR(i32 %22)
  store %struct.iio_dev* %23, %struct.iio_dev** %6, align 8
  br label %51

24:                                               ; preds = %5
  %25 = load %struct.iio_dev*, %struct.iio_dev** %12, align 8
  %26 = load %struct.kmx61_data*, %struct.kmx61_data** %7, align 8
  %27 = call i32 @kmx61_set_data(%struct.iio_dev* %25, %struct.kmx61_data* %26)
  %28 = load %struct.kmx61_data*, %struct.kmx61_data** %7, align 8
  %29 = getelementptr inbounds %struct.kmx61_data, %struct.kmx61_data* %28, i32 0, i32 0
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %29, align 8
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 0
  %32 = load %struct.iio_dev*, %struct.iio_dev** %12, align 8
  %33 = getelementptr inbounds %struct.iio_dev, %struct.iio_dev* %32, i32 0, i32 5
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 0
  store i32* %31, i32** %34, align 8
  %35 = load %struct.iio_chan_spec*, %struct.iio_chan_spec** %9, align 8
  %36 = load %struct.iio_dev*, %struct.iio_dev** %12, align 8
  %37 = getelementptr inbounds %struct.iio_dev, %struct.iio_dev* %36, i32 0, i32 4
  store %struct.iio_chan_spec* %35, %struct.iio_chan_spec** %37, align 8
  %38 = load i32, i32* %10, align 4
  %39 = load %struct.iio_dev*, %struct.iio_dev** %12, align 8
  %40 = getelementptr inbounds %struct.iio_dev, %struct.iio_dev* %39, i32 0, i32 0
  store i32 %38, i32* %40, align 8
  %41 = load i8*, i8** %11, align 8
  %42 = load %struct.iio_dev*, %struct.iio_dev** %12, align 8
  %43 = getelementptr inbounds %struct.iio_dev, %struct.iio_dev* %42, i32 0, i32 1
  store i8* %41, i8** %43, align 8
  %44 = load i32, i32* @INDIO_DIRECT_MODE, align 4
  %45 = load %struct.iio_dev*, %struct.iio_dev** %12, align 8
  %46 = getelementptr inbounds %struct.iio_dev, %struct.iio_dev* %45, i32 0, i32 3
  store i32 %44, i32* %46, align 8
  %47 = load %struct.iio_info*, %struct.iio_info** %8, align 8
  %48 = load %struct.iio_dev*, %struct.iio_dev** %12, align 8
  %49 = getelementptr inbounds %struct.iio_dev, %struct.iio_dev* %48, i32 0, i32 2
  store %struct.iio_info* %47, %struct.iio_info** %49, align 8
  %50 = load %struct.iio_dev*, %struct.iio_dev** %12, align 8
  store %struct.iio_dev* %50, %struct.iio_dev** %6, align 8
  br label %51

51:                                               ; preds = %24, %20
  %52 = load %struct.iio_dev*, %struct.iio_dev** %6, align 8
  ret %struct.iio_dev* %52
}

declare dso_local %struct.iio_dev* @devm_iio_device_alloc(i32*, i32) #1

declare dso_local %struct.iio_dev* @ERR_PTR(i32) #1

declare dso_local i32 @kmx61_set_data(%struct.iio_dev*, %struct.kmx61_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
